# cmake_tutorial

./: README.md  notes.md
hello_world/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world  hello_world.cc
linking_static_shared_libs/: CMakeLists.txt
linking_static_shared_libs/src/: main.cc
project_with_directories/: CMakeLists.txt
project_with_directories/src/: student.cc
shared_library/: CMakeLists.txt
shared_library/include/: student.h
shared_library/include/student/: student.h
shared_library/src/: student.cc
static_library/: CMakeLists.txt
